# Navigation-and-control

./: README.md
Control/adrc/程序实现/基于px4的roll角速度控制/: adrc_control_params.c
Control/modern control/LQR/Genetic　algorithm　drone　LQR　control/: README.md  drone.py  genetic_algorithm.py
Control/北航多选翼设计公开课(偏理论)/: 结束.md
Control/尾座式无人机控制/: INDI控制尾座式无人机.md  Modeling and control of a flying wing Tailsitter unmanned aerial vehicle.md  px4尾座式无人机实现.md  计划学习的论文.md  设计实现尾坐式hitl仿真.md
Navigation/卡尔曼滤波算法/px4_ecl学习记录/: 2.航向观测融合.md  5磁偏观测.md  从头开始掌握ekf流程.md  １协方差传递.md  ３3D地磁方差融合.md  ４地磁融合.md
Navigation/卡尔曼滤波算法/书籍学习记录/Kalman Filtering with Real-Time Applications/: 1预备知识.md
Navigation/卡尔曼滤波算法/书籍学习记录/Kalman and Bayesian Filters in Python/: 12粒子滤波器.md
Navigation/卡尔曼滤波算法/其他/: ekf.py
Navigation/卡尔曼滤波算法/论文学习记录/: A New Extension of the Kalman Filterto Nonlinear Systems.md  Unscented Filtering for Spacecraft Attitude Estimation.md  Unscented Kalman Filter Tutorial.md
Ros/catkin_ws1/: readme.md
Ros/catkin_ws1/devel/: .catkin  local_setup.sh
Ros/catkin_ws1/devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Area.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h  Num.h
Ros/catkin_ws1/devel/lib/beginner_tutorials/: fibonacci_client  fibonacci_server  hello_world  listener  listenersrv  plugin_use  talker  talker_para  talkersrv
Ros/catkin_ws1/devel/lib/pkgconfig/: beginner_tutorials.pc  nodelet_tutorials.pc  pluginlib_tutorials.pc
Ros/catkin_ws1/install/: .rosinstall  local_setup.sh
Ros/catkin_ws1/install/lib/beginner_tutorials/: hello_world
Ros/catkin_ws1/install/lib/pkgconfig/: beginner_tutorials.pc
Ros/catkin_ws1/install/share/beginner_tutorials/: package.xml
Ros/catkin_ws1/src/beginner_tutorials/: CMakeLists.txt
Ros/catkin_ws1/src/beginner_tutorials/config/: talker_para.yaml
Ros/catkin_ws1/src/beginner_tutorials/src/fibonacci/: fibonacci_client.cpp
Ros/catkin_ws1/src/beginner_tutorials/src/hello_world/: hello_world.cpp
Ros/catkin_ws1/src/beginner_tutorials/src/listener/: listener.cpp  listenersrv.cpp
Ros/catkin_ws1/src/beginner_tutorials/src/plugin_use/: plugin_use.cpp
Ros/catkin_ws1/src/beginner_tutorials/src/talker/: talker.cpp  talker_para.cpp  talkersrv.cpp
Ros/catkin_ws1/src/nodelet_tutorials/: CMakeLists.txt  package.xml
Ros/catkin_ws1/src/nodelet_tutorials/include/nodelet_tutorials/: nodelet_plugins.h
Ros/catkin_ws1/src/nodelet_tutorials/src/: nodelet_plugins.cpp
Ros/catkin_ws1/src/pluginlib_tutorials/: CMakeLists.txt  package.xml
Ros/catkin_ws1/src/pluginlib_tutorials/src/: polygon_loader.cpp  polygon_plugins.cpp
Ros/ros_learn_sub_pub/: readme.md
Ros/ros_learn_sub_pub/devel/: .catkin  local_setup.sh  setup.sh
Ros/ros_learn_sub_pub/devel/include/new_msgs/: student.h
Ros/ros_learn_sub_pub/devel/lib/demo_cpp/: cpphello  hello  rec  sort
Ros/ros_learn_sub_pub/devel/lib/new_msgs/: pub
Ros/ros_learn_sub_pub/devel/lib/pkgconfig/: demo_cpp.pc  demo_py.pc  new_msgs.pc
Ros/ros_learn_sub_pub/src/demo_cpp/: CMakeLists.txt  package.xml
Ros/ros_learn_sub_pub/src/demo_cpp/src/: reciver.cpp
Ros/ros_learn_sub_pub/src/new_msgs/: CMakeLists.txt  package.xml
Ros/ros_learn_sub_pub/src/new_msgs/msg/: student.msg
Ros/ros_learn_sub_pub/src/new_msgs/src/: publish.cpp
Ros/ros_robtic/: readme.md
Ros/ros_robtic/devel/: .catkin  local_setup.sh  setup.sh
Ros/ros_robtic/devel/include/ros_learn_7/: MsgTutorial.h
Ros/ros_robtic/devel/include/ros_learn_action/: FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h
Ros/ros_robtic/devel/include/ros_learn_service/: SrvTutorial.h  SrvTutorialRequest.h  (+1 more)
Ros/ros_robtic/src/ros_learn_7/: CMakeLists.txt  package.xml
Ros/ros_robtic/src/ros_learn_7/src/: topic_publisher.cpp  topic_subscriber.cpp
Ros/ros_robtic/src/ros_learn_action/: CMakeLists.txt  package.xml
Ros/ros_robtic/src/ros_learn_action/src/: action_client.cpp  action_server.cpp
Ros/ros_robtic/src/ros_learn_service/: CMakeLists.txt  package.xml
Ros/ros_robtic/src/ros_learn_service/src/: service_client.cpp  service_server.cpp
Ros/ros_robtic/src/ros_learn_service/srv/: SrvTutorial.srv
c++learn/c++primerplus第六版学习笔记/: 11.md
c++learn/c++primerplus第六版学习笔记/11_code/: CMakeLists.txt  mytime.cpp  mytime.h  useit.cpp
control/adrc/程序实现/基于px4的roll角速度控制/: adrc_control.h
control/modern control/LQR/xx/: README.md  main.py
control/北航多选翼设计公开课/飞行器设计(偏理论)/: 1动力系统模型.md
control/尾座式无人机控制/: Full Attitude Control of a VTOL Tailsitter UAV.md  INDI控制尾座式无人机.md  tailsitter无人机建模.md  尾坐式飞行器建模技术与控制系统研究.md
不客观的客观评述/: 北航／多选翼飞行器设计与控制观后感.md
北航多选翼设计公开课/: 1动力系统模型.md  2坐标系和姿态表示.md  3动态模型和参数测量.md  北航／多选翼飞行器设计与控制观后感.md  结束.md
北航多选翼设计公开课/飞行器设计(偏理论)/: 2坐标系和姿态表示.md  结束.md
导航相关/卡尔曼滤波算法/个人学习记录/Kalman Filtering with Real-Time Applications/: 1预备知识.md
导航相关/卡尔曼滤波算法/个人学习记录/Kalman and Bayesian Filters in Python/: 12粒子滤波器.md  13平滑.md  14自适应滤波器.md  第一章.md  第十一章.md  第十章.md  ５多元高斯.md
导航相关/卡尔曼滤波算法/书籍学习记录/Kalman Filtering Theory and Practice Using MATLAB/: １引言.md
导航相关/卡尔曼滤波算法/书籍学习记录/Kalman and Bayesian Filters in Python/: 10UKF.md  13平滑.md  14自适应滤波器.md
导航相关/卡尔曼滤波算法/论文学习记录/: Unscented Filtering and Nonlinear Estimation.md  Unscented Kalman Filter Tutorial.md
导航相关/卡尔曼滤波算法（FK）/个人学习总结于记录/: Kalman and Bayesian Filters in Python  Kalman and Bayesian Filters in Python.md
导航相关/卡尔曼滤波算法（FK）/个人学习记录/: Kalman and Bayesian Filters in Python.md
导航相关/卡尔曼滤波算法（FK）/个人学习记录/Kalman and Bayesian Filters in Python/: 第一章.md  第七章.md  第三章.md  第九章.md  第二章.md  第五章.md  第八章.md  第六章.md  第四章.md
控制相关/adrc/程序实现/基于px4的roll角速度控制/: adrc_control.cpp  readme.md
控制相关/北航多选翼设计公开课/飞行器设计(偏实践)/: 1课程开始.md
控制相关/北航多选翼设计公开课/飞行器设计(偏理论)/: 3动态模型和参数测量.md
控制相关/尾座式无人机控制/: (没看完)增量控制尾座式无人机.md  Flight Testing of the (没看完)T-Wing Tail-Sitter Unmanned Air Vehicle.md  Full Attitude Control of a VTOL Tailsitter UAV.md  px4尾座式无人机实现.md  tailsitter无人机建模.md  tail结构设计和建模.md
(+144 files in other folders)
