<?xml version="1.0"?>
<package format="2">
  <name>nodelet_tutorials</name>
  <version>0.0.0</version>
  <description>The nodelet_tutorials package</description>

  <maintainer email="dw@todo.todo">dw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>

  </export>
</package>
